<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="77dp">

        <EditText
            android:id="@+id/putAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="396dp"
            android:focusable="false"
            android:hint="@string/adress_name"
            android:minHeight="48dp"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="328dp"
            android:hint="@string/comment"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/putAddress"
            app:layout_constraintVertical_bias="0.9" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="464dp"
            android:contentDescription="@string/order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="194dp"
            android:layout_height="48dp"
            android:layout_marginBottom="532dp"
            android:ems="10"
            android:hint="@string/date"
            android:textAlignment="center"
            android:textColorHint="@color/text"
            android:textSize="20dp"
            style="?android:spinnerStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.023"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCreateO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner"
            android:layout_marginLeft="130dp"
            android:layout_marginBottom="200dp"
            android:hint="None"
            android:text="@string/create"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.014"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etComment"
            app:layout_constraintVertical_bias="0.518" />

        <TextView
            android:id="@+id/tvCreateOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="648dp"
            android:text="@string/create_order"
            android:textColor="@color/text"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.018"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="612dp"
            android:text="@string/desc_order"
            android:textColor="@color/text"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/etTime"
            android:layout_width="136dp"
            android:textColor="@color/text"
            android:layout_height="48dp"
            android:layout_marginBottom="532dp"
            android:layout_toEndOf="@+id/etDate"
            android:textSize="20dp"
            android:hint="@string/time"
            style="?android:spinnerStyle"
            android:textColorHint="@color/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toEndOf="@+id/etDate" />

        <ProgressBar
            android:id="@+id/progressBarO"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="152dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>